--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plataforma D&D Online</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <!-- Barra de Navegação -->
+    <nav class="navbar">
+        <div class="nav-brand">
+            <i class="fas fa-dragon"></i>
+            <h1>Plataforma D&D</h1>
+        </div>
+        <div class="nav-menu">
+            <button class="nav-btn active" data-section="characters">
+                <i class="fas fa-user"></i> Fichas
+            </button>
+            <button class="nav-btn" data-section="journal">
+                <i class="fas fa-book"></i> Diário
+            </button>
+            <button class="nav-btn" data-section="dice">
+                <i class="fas fa-dice"></i> Dados
+            </button>
+            <button class="nav-btn" data-section="chat">
+                <i class="fas fa-comments"></i> Chat
+            </button>
+        </div>
+        <div class="user-menu">
+            <span id="username">Jogador</span>
+            <button id="logout-btn">Sair</button>
+        </div>
+    </nav>
 
+    <!-- Conteúdo Principal -->
+    <main class="container">
+        <!-- Seção: Fichas de Personagem -->
+        <section id="characters" class="content-section active">
+            <div class="section-header">
+                <h2><i class="fas fa-user"></i> Fichas de Personagem</h2>
+                <button id="new-character" class="btn-primary">
+                    <i class="fas fa-plus"></i> Novo Personagem
+                </button>
+            </div>
+            <div class="character-list" id="character-list">
+                <!-- Lista de personagens será carregada aqui -->
+            </div>
+            <div class="character-form" id="character-form" style="display:none;">
+                <!-- Formulário de personagem será injetado aqui -->
+            </div>
+        </section>
+
+        <!-- Seção: Diário do Aventureiro -->
+        <section id="journal" class="content-section">
+            <div class="section-header">
+                <h2><i class="fas fa-book"></i> Diário do Aventureiro</h2>
+                <button id="new-entry" class="btn-primary">
+                    <i class="fas fa-plus"></i> Nova Entrada
+                </button>
+            </div>
+            <div class="journal-entries" id="journal-entries">
+                <!-- Entradas do diário serão carregadas aqui -->
+            </div>
+        </section>
+
+        <!-- Seção: Lançador de Dados -->
+        <section id="dice" class="content-section">
+            <div class="section-header">
+                <h2><i class="fas fa-dice"></i> Lançador de Dados</h2>
+            </div>
+            <div class="dice-container">
+                <div class="dice-selector">
+                    <h3>Selecione os Dados</h3>
+                    <div class="dice-options">
+                        <button class="dice-btn" data-sides="4">D4</button>
+                        <button class="dice-btn" data-sides="6">D6</button>
+                        <button class="dice-btn" data-sides="8">D8</button>
+                        <button class="dice-btn" data-sides="10">D10</button>
+                        <button class="dice-btn" data-sides="12">D12</button>
+                        <button class="dice-btn" data-sides="20">D20</button>
+                        <button class="dice-btn" data-sides="100">D100</button>
+                    </div>
+                    <div class="dice-quantity">
+                        <label>Quantidade:</label>
+                        <input type="number" id="dice-count" min="1" max="10" value="1">
+                    </div>
+                    <button id="roll-dice" class="btn-primary">
+                        <i class="fas fa-dice"></i> Lançar Dados
+                    </button>
+                </div>
+                <div class="dice-results">
+                    <h3>Resultados</h3>
+                    <div id="dice-history">
+                        <!-- Histórico de rolagens -->
+                    </div>
+                    <div class="current-roll" id="current-roll">
+                        <!-- Resultado atual -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção: Chat -->
+        <section id="chat" class="content-section">
+            <div class="section-header">
+                <h2><i class="fas fa-comments"></i> Chat da Sessão</h2>
+                <div class="room-info">
+                    <span id="room-name">Sala Principal</span>
+                    <span id="online-count">0 jogadores online</span>
+                </div>
+            </div>
+            <div class="chat-container">
+                <div class="chat-messages" id="chat-messages">
+                    <!-- Mensagens do chat -->
+                </div>
+                <div class="chat-input">
+                    <input type="text" id="message-input" placeholder="Digite sua mensagem...">
+                    <button id="send-message" class="btn-primary">
+                        <i class="fas fa-paper-plane"></i> Enviar
+                    </button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Modal para visualização detalhada -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div id="modal-body"></div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="js/api-service.js"></script>
+    <script src="js/character-sheet.js"></script>
+    <script src="js/journal.js"></script>
+    <script src="js/dice-roller.js"></script>
+    <script src="js/chat.js"></script>
+    <script src="js/app.js"></script>
+</body>
+</html>
